# Changelog

## Version 5.2.2

* Fixing #431 Missing ubuntu 20 builds (thanks to techore)
* Fixing file extension drop down would not always set correct on encoder change (thanks to GT500org)
* Fixing missing translations for VVC
* Fixing VVC was adding extra params it did not support

## Version 5.2.1

* Fixing #426 Version 5.2 does not run on fresh install (thanks to Bandid0)
* Fixing #427 Error loading videos that do not have tags (thanks to Maddie Davis)

## Version 5.2.0

* Adding #100 Output format selection (thanks to me)
* Adding #227 load directory of videos support (thanks to Chris / moonwhaler and a lot of others)
* Adding #233 Versatile Video Coding (aka x266) support (thanks to F.O.R.A.R.T.)
* Adding #200 #320 #373 UI scaling (thanks to tyeeman, wynterca and reza)
* Adding #367 safer font defaults (thanks to Archer Allstars)
* Adding #242 and #400 resolution saves to the profile (thanks to x9sim9)
* Adding #409 Copy video track title information from input file (thanks to Don Gafford)
* Adding #422 Add ICQ and LA-ICQ for rigayas QSV (thanks to @bender1984)
* Adding pip builds again allow for `pipx` install
* Adding Ukrainian ( Українська ) language support
* Adding Korean ( 한국어 ) language support
* Adding default log cleanup on exit, can be disabled in settings
* Fixing #332 Command Window always shows "qt.svg: Cannot open file" errors (thanks to Wontell)
* Fixing #350 Unable to burn in subtitles (thanks to Maddie Davis)
* Fixing #398 audio and subtitles disabled when editing queue item (thanks to philblue1 and Don Gafford)
* Fixing #413 Wrong equalizer settings with not US locales (thanks to Massimo Pissarello)
* Fixing #421 Queue extras were not ever being cleaned up (thanks to Maddie Davis)
* Fixing QSV AV1 setting panel issues
* Fixing app could crash on startup if could not check for updates to github due to rate limiting
* Fixing removing legacy pkg_resources for importlib.resources

## Version 5.1.0
